<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.yamacrypt.webaudionovel.ui.library.urlfragment.LibraryFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_files_list"
        >

        <action android:id="@+id/action_myself"
            app:destination="@id/navigation_home"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.yamacrypt.webaudionovel.ui.search.selector.SelectWebFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_selectweb" >
 
    </fragment>


    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.yamacrypt.webaudionovel.ui.setting.SettingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_speed"
            app:destination="@id/navigation_speed" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_author"
            app:destination="@id/navigation_author" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_pitch"
            app:destination="@id/navigation_pitch" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_language"
            app:destination="@id/navigation_language" />
    </fragment>
    <fragment
        android:id="@+id/navigation_speed"
        android:name="com.yamacrypt.webaudionovel.ui.setting.SpeedFragment"
        android:label="@string/change_speed"
        tools:layout="@layout/fragment_speed" />
    <fragment
        android:id="@+id/navigation_pitch"
        android:name="com.yamacrypt.webaudionovel.ui.setting.PitchFragment"
        android:label="@string/change_pitch"
        tools:layout="@layout/fragment_pitch" />
    <fragment
        android:id="@+id/navigation_language"
        android:name="com.yamacrypt.webaudionovel.ui.setting.LanguageFragment"
        android:label="@string/change_language"
        tools:layout="@layout/fragment_language" />
    <fragment
        android:id="@+id/navigation_author"
        android:name="com.yamacrypt.webaudionovel.ui.setting.AuthorFragment"
        android:label="@string/author"
        tools:layout="@layout/fragment_author" />
    <fragment
        android:id="@+id/navigation_sleep_timer"
        android:name="com.yamacrypt.webaudionovel.ui.SleepTimerFragment"
        android:label="@string/sleep_timer"
        tools:layout="@layout/fragment_sleep_timer" />
    <fragment
        android:id="@+id/navigation_player"
        android:name="com.yamacrypt.webaudionovel.ui.PlayerFragment"
        android:label="{dynamicTitle}"
        tools:layout="@layout/fragment_player" >
        <argument
            android:name="dynamicTitle"
            app:argType="string"/>
        <action
            android:id="@+id/action_navigation_player_to_navigation_speed"
            app:destination="@id/navigation_speed" />
        <action
            android:id="@+id/action_navigation_player_to_navigation_sleep_timer"
            app:destination="@id/navigation_sleep_timer" />
    </fragment>
    <action
        android:id="@+id/go_player"
        app:destination="@id/navigation_player"/>
</navigation>