<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_play_navigation"
    app:startDestination="@+id/navigation_menu"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.yamacrypt.webaudionovel.ui.MenuFragment"
        android:label="@string/title_home"
        tools:layout="@layout/menu" >

        <action
            android:id="@+id/action_navigation_menu_to_navigation_play"
            app:destination="@id/navigation_play" />
        <action
            android:id="@+id/action_navigation_menu_to_navigation_web"
            app:destination="@id/navigation_web" />

    </fragment>
    <fragment
        android:id="@+id/navigation_play"
        android:name="com.yamacrypt.webaudionovel.ui.PlayerFragment"
        android:label="{dynamicTitle}"
        tools:layout="@layout/fragment_player" >
        <argument
            android:name="dynamicTitle"
            app:argType="string"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_web"
        android:name="com.yamacrypt.webaudionovel.ui.search.WebFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_web" >
        <action
            android:id="@+id/action_navigation_web_to_navigation_menu"
            app:destination="@id/navigation_menu" />
    </fragment>
    <fragment
        android:id="@+id/playernavigation_language"
        android:name="com.yamacrypt.webaudionovel.ui.setting.LanguageFragment"
        android:label="@string/change_language"
        tools:layout="@layout/fragment_language" />
</navigation>