<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/speed__layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/baseitem_background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/change_speed"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/speed_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="@drawable/button_state"
                    android:gravity="center"
                    android:text="Button"
                    android:textColor="@color/colorText"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pitch__layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/baseitem_background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pjtchView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/change_pitch"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/pitch_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="@drawable/button_state"
                    android:gravity="center"
                    android:text="Button"
                    android:textColor="@color/colorText"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/language__layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/baseitem_background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/languageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/change_language"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/language_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="@drawable/button_state"
                    android:gravity="center"
                    android:text="Button"
                    android:textColor="@color/colorText"
                    android:textSize="20sp" />

            </LinearLayout>

            <Switch
                android:id="@+id/isTitleSpeakingSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_state"
                android:textAllCaps="false"
                android:stateListAnimator="@null"
                android:text="@string/isTitleSpeaking" />
            <Switch
                android:id="@+id/buttonModeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_state"
                android:textAllCaps="false"
                android:stateListAnimator="@null"
                android:text="@string/buttonMode" />
            <Button
                android:id="@+id/review_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_state"
                android:text="@string/review_text"
                android:textAllCaps="false"
                android:stateListAnimator="@null"
                android:textColor="@color/colorText" />

            <Button
                android:id="@+id/author_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_state"
                android:stateListAnimator="@null"
                android:text="@string/author"
                android:textAllCaps="false"

                android:textColor="@color/colorText" />




        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>